reviewed html section and completed shoe store sub challenge

--- a/html_fundamentals/code_magazine/index.html
+++ b/html_fundamentals/code_magazine/index.html
@@ -98,6 +98,42 @@
       </ul>
       <p>Hopefully you learned something new here. See you next time!</p>
     </article>
+
+    <aside>
+      <header>
+        <h4>Related posts</h4>
+      </header>
+
+      <ul>
+        <li>
+          <img
+            src="img/related-1.jpg"
+            width="75"
+            height="75"
+            alt="Man coding"
+          /><a href="#">How to Learn Web Development</a>
+          <p>by Jonas Schmedtmann</p>
+        </li>
+        <li>
+          <img
+            src="img/related-2.jpg"
+            width="75"
+            height="75"
+            alt="Lightning"
+          /><a href="#">The Unkown Powers of CSS</a>
+          <p>by Jim Dillon</p>
+        </li>
+        <li>
+          <img
+            src="img/related-3.jpg"
+            width="75"
+            height="75"
+            alt="Code screen"
+          /><a href="#">Why Javascript is Awesome</a>
+          <p>by Matilda Smith</p>
+        </li>
+      </ul>
+    </aside>
     <footer>Copyright &copy; 2027 by The Code Magazine.</footer>
   </body>
 </html>
