completed pseudo class section

--- a/css_fundamentals/code_magazine/index.html
+++ b/css_fundamentals/code_magazine/index.html
@@ -90,7 +90,9 @@
         web. Here are 5 of them:
       </p>
       <ul>
-        <li>To be able to use the fundamental web dev language</li>
+        <li class="first-li">
+          To be able to use the fundamental web dev language
+        </li>
         <li>
           To hand-craft beautiful websites instead of relying on tools like
           Worpress or Wix
@@ -108,7 +110,7 @@
       </header>
 
       <ul class="related">
-        <li>
+        <li class="first-li">
           <img
             src="img/related-1.jpg"
             width="75"
