covered dealing with conflicting selectors and selector priority

--- a/css_fundamentals/code_magazine/index.html
+++ b/css_fundamentals/code_magazine/index.html
@@ -33,7 +33,7 @@
           alt="Laura Jones headshot"
         />
 
-        <p id="author">
+        <p id="author-text" class="author">
           Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
         </p>
 
