completed inheritance section and refactored store page with css

--- a/css_fundamentals/code_magazine/index.html
+++ b/css_fundamentals/code_magazine/index.html
@@ -17,6 +17,7 @@
       <h1>📘 The Code Magazine</h1>
 
       <nav>
+        <!-- <strong>This is the navigation bar</strong> -->
         <a href="blog.html">Blog</a>
         <a href="#">Challenges</a>
         <a href="#">Flexbox</a>
