completed store challenge and block, inline, and inline-block box types section

--- a/css_fundamentals/shoe_store/index.html
+++ b/css_fundamentals/shoe_store/index.html
@@ -32,7 +32,7 @@
         >
       </p>
       <h3 class="details-title">Product details</h3>
-      <ul>
+      <ul class="details-list">
         <li>
           <p>Lightweight, durable canvas sneaker</p>
         </li>
