completed positioning and pseudo selector section

--- a/css_fundamentals/code_magazine/index.html
+++ b/css_fundamentals/code_magazine/index.html
@@ -46,6 +46,7 @@
             height="200"
             alt="Screen with HTML code"
           />
+          <button>❤️ Like</button>
         </header>
         <p>
           All modern websites and web applications are built using three
