completed css fundamentals final challenge

--- a/css_fundamentals/shoe_store/index.html
+++ b/css_fundamentals/shoe_store/index.html
@@ -19,7 +19,8 @@
         <p class="price"><strong>$65.00</strong></p>
       </header>
       <p>Free Shipping</p>
-      <p>
+      <p class="sale">Sale</p>
+      <p class="product-description">
         Ready to dress up or down, these classic canvas Chucks are an everday
         wardrobe staple.
       </p>
@@ -31,6 +32,16 @@
           >More information &rarr;</a
         >
       </p>
+
+      <div class="colors">
+        <div class="color"></div>
+        <div class="color color-blue"></div>
+        <div class="color color-red"></div>
+        <div class="color color-yellow"></div>
+        <div class="color color-green"></div>
+        <div class="color color-brown"></div>
+      </div>
+
       <h3 class="details-title">Product details</h3>
       <ul class="details-list">
         <li>
