completed building web application layout

--- a/components_and_layout_patterns/layout_patterns/web_application_layout/web_app.html
+++ b/components_and_layout_patterns/layout_patterns/web_application_layout/web_app.html
@@ -24,7 +24,6 @@
         grid-template-rows: 80px 1fr;
       }
       nav,
-      menu,
       section,
       main,
       aside {
@@ -37,11 +36,44 @@
       }
       menu {
         background-color: #7048e8;
-        color: #fff;
         grid-column: 2 / -1;
+        display: flex;
+        align-items: center;
+
+        gap: 12px;
+        padding: 0 40px;
+      }
+      button {
+        display: inline-block;
+        font-size: 16px;
+        font-weight: bold;
+        background-color: #5f3dc4;
+        border: none;
+        cursor: pointer;
+        color: #fff;
+        padding: 8px 12px;
+      }
+      button:last-child {
+        background-color: #d6336c;
+        margin-left: auto;
       }
       section {
         background-color: #e9ecef;
+        padding: 40px;
+        /*How elements that don't fit into the container appear*/
+        overflow: scroll;
+        /*overflow: hidden*/
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+      }
+      .email {
+        background-color: #adb5bd;
+        height: 96px;
+        flex-shrink: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
       aside {
         background-color: #e9ecef;
@@ -49,9 +81,26 @@
     </style>
   </head>
   <body>
-    <nav>Nav</nav>
-    <menu>Menu</menu>
-    <section>Inbox</section>
+    <nav></nav>
+    <menu
+      ><button>New</button>
+      <button>Reply</button>
+      <button>Forward</button>
+      <button>Mark Unread</button>
+      <button>Trash</button></menu
+    >
+    <section>
+      <div class="email">Email 1</div>
+      <div class="email">Email 2</div>
+      <div class="email">Email 3</div>
+      <div class="email">Email 4</div>
+      <div class="email">Email 5</div>
+      <div class="email">Email 6</div>
+      <div class="email">Email 7</div>
+      <div class="email">Email 8</div>
+      <div class="email">Email 9</div>
+      <div class="email">Email 10</div>
+    </section>
     <main>Email view</main>
     <aside>Additional Info</aside>
   </body>
