--- a/omnifood_project/index.html
+++ b/omnifood_project/index.html
@@ -9,17 +9,20 @@
   <body>
     <section class="section-hero">
       <div class="hero">
-        <div class="hero-text-box"></div>
-        <h1 class="heading-primary">
-          A healthy meal delivered to your door, every single day
-        </h1>
-        <p class="hero-description">
-          The smart 365-days-per-year food subscription that will make you eat
-          healthy again. Tailored to your personal tastes and nutritional needs.
-          We have delivered 250,000+ meals last year!
-        </p>
-        <a href="#" class="btn">Start eating well</a>
-        <a href="#" class="btn">Learn more &rarr;</a>
+        <div class="hero-text-box">
+          <h1 class="heading-primary">
+            A healthy meal delivered to your door, every single day
+          </h1>
+          <p class="hero-description">
+            The smart 365-days-per-year food subscription that will make you eat
+            healthy again. Tailored to your personal tastes and nutritional
+            needs. We have delivered 250,000+ meals last year!
+          </p>
+          <a href="#" class="btn btn--full margin-right-sm"
+            >Start eating well</a
+          >
+          <a href="#" class="btn btn--outline">Learn more &darr;</a>
+        </div>
         <div class="hero-img-box">
           <img
             src="img/hero.png"
