--- a/omnifood_project/index.html
+++ b/omnifood_project/index.html
@@ -75,6 +75,14 @@
           </div>
         </div>
       </section>
+      <section class="section-how">
+        <div class="container grid grid--2-cols">
+          <div>Test1</div>
+          <div>Test2</div>
+          <div>Test3</div>
+          <div>Test4</div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
