--- a/omnifood_project/index.html
+++ b/omnifood_project/index.html
@@ -464,12 +464,12 @@
           </h2>
         </div>
         <div class="container grid grid--2-cols">
-          <div class="pricing-plan">
+          <div class="pricing-plan pricing-plan--starter">
             <header class="plan-header">
               <p class="plan-name">Starter</p>
               <p class="plan-price"><span>$</span>399</p>
+              <p class="plan-text">Per month. That's just $13 per meal!</p>
             </header>
-            <p class="plan-text">Per month. That's just $13 per meal!</p>
             <ul class="list">
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
@@ -477,18 +477,21 @@
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>Order times are between 11am and 9pm</span>
+                ><span>Order from 11am and 9pm</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
                 ><span>Delivery is free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="close-outline"></ion-icon>
               </li>
             </ul>
             <div class="plan-sign-up">
               <a href="#" class="btn btn--full">Start eating well</a>
             </div>
           </div>
-          <div class="pricing-plan">
+          <div class="pricing-plan pricing-plan--complete">
             <header class="plan-header">
               <p class="plan-name">Complete</p>
               <p class="plan-price"><span>$</span>649</p>
@@ -497,11 +500,11 @@
             <ul class="list">
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>2 meals per day</span>
+                ><span><strong>2 meals</strong> per day</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>Order 24/7</span>
+                ><span>Order <strong> 24/7</strong></span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
@@ -516,6 +519,12 @@
               <a href="#" class="btn btn--full">Start eating well</a>
             </div>
           </div>
+        </div>
+        <div class="container grid grid--4-cols">
+          <div class="feature">Feature 1</div>
+          <div class="feature">Feature 2</div>
+          <div class="feature">Feature 3</div>
+          <div class="feature">Feature 4</div>
         </div>
       </section>
     </main>
