--- a/omnifood_project/index.html
+++ b/omnifood_project/index.html
@@ -564,6 +564,18 @@
           <div class="feature">Feature 4</div> -->
         </div>
       </section>
+      <section class="section-cta">
+        <div class="container">
+          <div class="cta">
+            <div class="cta-text-box">CTA</div>
+            <div
+              class="cta-img-box"
+              role="img"
+              aria-label="Woman enjoying food"
+            ></div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
