--- a/omnifood_project_responsive_web_design/index.html
+++ b/omnifood_project_responsive_web_design/index.html
@@ -24,7 +24,7 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
         <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
       </a>
