--- a/omnifood_project_finishing_touches/index.html
+++ b/omnifood_project_finishing_touches/index.html
@@ -21,6 +21,7 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script defer src="js/script.js"></script>
     <title>Omnifood</title>
   </head>
   <body>
@@ -648,7 +649,8 @@
             </li>
           </ul>
           <p class="copyright">
-            Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.
+            Copyright &copy; <span class="year">2027</span> by Omnifood, Inc.
+            All rights reserved.
           </p>
         </div>
         <div class="address-col">
